# AnarchyLoader

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/workflows/: rust.yaml
src/: config.rs  custom_widgets.rs  downloader.rs  hacks.rs  inject.rs  logger.rs  main.rs  rpc.rs  steam.rs
src/games/: local.rs  mod.rs  roblox.rs
src/scanner/: mod.rs  scanner.rs
src/tabs/: about.rs  cfgs.rs  debug.rs  home.rs  logs.rs  mod.rs  settings.rs  top_panel.rs
src/utils/: cfgs.rs  config.rs  custom_widgets.rs  downloader.rs  grouping.rs  hacks.rs  helpers.rs  intro.rs  logger.rs  messages.rs  mod.rs  rpc.rs  statistics.rs  stats.rs  steam.rs  updater.rs
src/utils/api/: api_settings.rs  downloader.rs  hacks.rs  mod.rs  updater.rs
src/utils/ui/: grouping.rs  intro.rs  messages.rs  mod.rs  modal.rs  native_theme.rs  ui_settings.rs  widgets.rs
website/: index.html
website/discord/: index.html
website/static/css/: header.css  styles.css
website/static/js/: onload.js  script.js
website/static/js/libraries/: hacker-text.js
