[package]
name = "anarchyloader"
version = "1.1.5"
edition = "2021"
build = "build.rs"
authors = ["dest4590"]

[features]
scanner = ["dep:pelite", "dep:regex"]

[dependencies]
chrono = "0.4.39"
dirs = "6.0.0"
url = "2.5.4"

eframe = "0.31.0"
egui = { version = "0.31.0", features = ["serde"] }
egui_dnd = "0.12.0"
egui_alignments = "0.3.2"
egui-modal = { git = "https://github.com/mkrueger/egui-modal", rev = "74add24" } # use commit `Updated to egui 0.31`
egui_commonmark = "0.20.0"
egui_extras = { version = "0.31.0", features = ["all_loaders"] }
egui_material_icons = "0.3.0"
egui-notify = "0.19.0"
egui_text_animation = "0.1.1"
egui-theme-switch = "0.3.0"
egui_transition_animation = "0.1.3"
catppuccin-egui = { version = "5.5.0", default-features = false, features = ["egui31"] }

discord-rich-presence = "0.2.5"
image = { version = "0.25.5", features = ["png"] }
is_elevated = "0.1.2"
log = { version = "0.4.25", features = ["serde"] }
opener = "0.7.2"
pelite = { version = "0.10.0", optional = true }
proc_mem = "0.1.6"
rand = "0.9.0"
regex = { version = "1.11.1", optional = true }
rfd = "0.15.2"
semver = "1.0.25"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
simplelog = "0.12.2"
sysinfo = "0.34.1"
ureq = { version = "2.12.1", features = ["json"] }
vdf-reader = "0.3.0"
whoami = "1.5.2"
winreg = "0.55.0"
zip-extract = "0.2.1"


[build-dependencies]
winres = "0.1.12"

[profile.release]
codegen-units = 1
opt-level = "z"
panic = "abort"
strip = true
lto = true
