[package]
name = "anarchyloader"
version = "2.0.0"
edition = "2021"
build = "build.rs"
authors = ["dest4590"]

[dependencies]
chrono = "0.4.43"
dirs = "6.0.0"
url = "2.5.8"

eframe = "0.33.3"
egui = { version = "0.33.3", features = ["serde"] }
egui_dnd = "0.14.0"
egui_alignments = "0.3.7"

egui_commonmark = "0.22.0"
egui_extras = { version = "0.33.3", features = ["all_loaders"] }
egui_material_icons = "0.5.0"
egui-notify = "0.21.0"
egui-theme-switch = "0.5.1"
catppuccin-egui = { version = "5.7.0", default-features = false, features = [
    "egui33",
] }

discord-rich-presence = "1.1.0"
image = { version = "0.25.9", features = ["png"] }
is_elevated = "0.1.2"
log = { version = "0.4.29", features = ["serde"] }
opener = "0.8.4"
pelite = { version = "0.10.0", optional = true }
proc_mem = "0.1.6"
rand = "0.10.0"
regex = { version = "1.12.3", optional = true }
rfd = "0.17.2"
semver = "1.0.27"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
simplelog = "0.12.2"
sysinfo = "0.38.1"
ureq = { version = "2.12.1", features = ["json"] }
vdf-reader = "0.3.3"
whoami = "2.0.3"
winreg = "0.55.0"
zip-extract = "0.4.1"


[build-dependencies]
winres = "0.1.12"

[profile.release]
codegen-units = 1
opt-level = "z"
panic = "abort"
strip = true
lto = true
